# ESP_S3_RFID

./: CMakeLists.txt
main/: CMakeLists.txt  app_events.h  main.c  main.cpp  pn532_i2c.cpp  pn532_i2c.h
main/ESP-PN532-UART-main/src/: PN532_UART.cpp  PN532_UART.h
main/ILI_9341_files/: glcdfont.c  hardware.c  hardware.cpp  hardware.h  keypad.c  keypad.cpp  keypad.h  tft_gfx.c  tft_gfx.cpp  tft_gfx.h  touch_sensor.c  touch_sensor.cpp  touch_sensor.h
main/tasks/: rfid_task.cpp  rfid_task.h  touch_task.cpp  touch_task.h
